kubernetes/cluster/active/apps/omnitools/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omnitools
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Web tools collection.
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: omni-tools.webp
    gethomepage.dev/name: OmniTools
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=omnitools"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "omnitools.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: omnitools
          namespace: omnitools
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
